--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Supplier/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Supplier/Delete.cshtml
@@ -38,68 +38,68 @@ else if (TempData["SuccessMessage"] != null)
 
     <div class="col-md-10">
         <label asp-for="Name" class="form-label">Nome <span style="color: red;">*</span></label>
-        <input asp-for="Name" type="text" class="form-control shadow-none" placeholder="Nome" disabled>
+        <input asp-for="Name" type="text" class="form-control shadow-none" placeholder="Nome" readonly>
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
     <div class="col-md-10">
         <label asp-for="CNPJ" class="form-label">CNPJ <span style="color: red;">*</span></label>
-        <input asp-for="CNPJ" type="text" class="form-control shadow-none" disabled>
+        <input asp-for="CNPJ" type="text" class="form-control shadow-none" readonly>
         <span asp-validation-for="CNPJ" class="text-danger"></span>
     </div>
 
     <div class="col-md-10">
         <label asp-for="Email" class="form-label">E-mail <span style="color: red;">*</span></label>
-        <input asp-for="Email" type="email" class="form-control shadow-none" placeholder="email@exemplo.com" disabled>
+        <input asp-for="Email" type="email" class="form-control shadow-none" placeholder="email@exemplo.com" readonly>
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
 
     <div class="col-md-10">
         <label asp-for="CellPhone" class="form-label">Telefone <span style="color: red;">*</span></label>
-        <input asp-for="CellPhone" type="tel" class="form-control shadow-none" disabled>
+        <input asp-for="CellPhone" type="tel" class="form-control shadow-none" readonly>
         <span asp-validation-for="CellPhone" class="text-danger"></span>
     </div>
 
     <div class="col-md-7">
         <label asp-for="Street" class="form-label">Rua <span style="color: red;">*</span></label>
-        <input asp-for="Street" type="text" class="form-control shadow-none" disabled>
+        <input asp-for="Street" type="text" class="form-control shadow-none" readonly>
         <span asp-validation-for="Street" class="text-danger"></span>
     </div>
 
     <div class="col-md-3">
         <label asp-for="Number" class="form-label">Número <span style="color: red;">*</span></label>
-        <input asp-for="Number" type="number" class="form-control shadow-none" disabled>
+        <input asp-for="Number" type="number" class="form-control shadow-none" readonly>
         <span asp-validation-for="Number" class="text-danger"></span>
     </div>
 
     <div class="col-md-10">
         <label asp-for="Complement" class="form-label">Complemento</label>
-        <input asp-for="Complement" type="text" class="form-control shadow-none" disabled>
+        <input asp-for="Complement" type="text" class="form-control shadow-none" readonly>
         <span asp-validation-for="Complement" class="text-danger"></span>
     </div>
 
     <div class="col-md-5">
         <label asp-for="PostalCode" class="form-label">Cep <span style="color: red;">*</span></label>
-        <input asp-for="PostalCode" type="text" class="form-control shadow-none" disabled>
+        <input asp-for="PostalCode" type="text" class="form-control shadow-none" readonly>
         <span asp-validation-for="PostalCode" class="text-danger"></span>
     </div>
 
     <div class="col-md-5">
         <label asp-for="Neighborhood" class="form-label">Bairro <span style="color: red;">*</span></label>
-        <input asp-for="Neighborhood" type="text" class="form-control shadow-none" disabled>
+        <input asp-for="Neighborhood" type="text" class="form-control shadow-none" readonly>
         <span asp-validation-for="Neighborhood" class="text-danger"></span>
     </div>
 
     <div class="col-md-5">
         <label asp-for="City" class="form-label shadow-none">Cidade <span style="color: red;">*</span></label>
-        <input asp-for="City" type="text" class="form-control shadow-none" disabled>
+        <input asp-for="City" type="text" class="form-control shadow-none" readonly>
         <span asp-validation-for="City" class="text-danger"></span>
         <br>
     </div>
 
     <div class="col-md-5">
         <label asp-for="State" class="form-label">Estado <span style="color: red;">*</span></label>
-        <input asp-for="State" type="text" class="form-control shadow-none" disabled>
+        <input asp-for="State" type="text" class="form-control shadow-none" readonly>
         <span asp-validation-for="State" class="text-danger"></span>
         <br>
     </div>
