--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Register.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Register.cshtml
@@ -79,18 +79,6 @@ else if (TempData["SuccessMessage"] != null)
             </div>
         }
 
-        @* <div class="col-md-6"> *@
-        @*     <label asp-for="@Model!.RaceId" class="form-label">Raça <span style="color: red;">*</span></label> *@
-        @*     <select asp-for="@Model!.RaceId" class="form-select shadow-none"> *@
-        @*         <option value="" selected disabled>Selecione a raça</option> *@
-        @*         @foreach (var race in Model!.Races) *@
-        @*         { *@
-        @*             <option value="@race!.Id">@race.Name</option> *@
-        @*         } *@
-        @*     </select> *@
-        @*     <span asp-validation-for="@Model!.RaceId" class="text-danger"></span> *@
-        @* </div> *@
-
         <div class="col-md-6">
             <label asp-for="@Model.RaceName" class="form-label">Raça<span style="color: red;">*</span></label>
             <input asp-for="@Model.RaceName" type="text" class="form-control shadow-none" placeholder="Digite a raça">
@@ -99,7 +87,7 @@ else if (TempData["SuccessMessage"] != null)
 
         <div class="col-md-2">
             <label asp-for="@Model!.BirthDate" class="form-label">Data de Nascimento</label>
-            <input asp-for="@Model!.BirthDate" type="date" min="@DateTime.Today.AddYears(-30).ToString("yyyy-MM-dd")" max="@DateTime.Today.ToString("yyyy-MM-dd")" class="form-control shadow-none" placeholder="Digite a data de nasc.">
+            <input asp-for="@Model!.BirthDate" type="date" min="@DateTime.Today.AddYears(-30).ToString("yyyy-MM-dd")" max="@DateTime.Now.ToString("yyyy-MM-dd")" class="form-control shadow-none" placeholder="Digite a data de nasc.">
         </div>
 
         <div class="col-md-8">
