--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Delete.cshtml
@@ -7,11 +7,11 @@
     Layout = "_Layout";
 }
 
-<div class="container-fluid text-black py-3">
+<div class="container-fluid py-3">
     <br>
-    <h2 class="display-6 text-center fw">
-        <img src="/Images/DadosDoServico.png" alt="">
-    </h2>
+    <h1 class="text-center">
+        Dados do Serviço
+    </h1>
     <br>
 </div>
 
@@ -43,7 +43,7 @@
             <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Digite o preço" readonly>
             <span asp-validation-for="@Model.Price" class="text-danger"></span>
         </div>
-
+        
         <div class="d-grid gap-2 col-4 mx-auto col-md-5">
             <br>
             <button class="btn btn-dark btn-lg" type="submit">Deletar</button>
