--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Supplier/Register.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Supplier/Register.cshtml
@@ -42,7 +42,7 @@ else if (TempData["SuccessMessage"] != null)
 
     <div class="col-md-10">
         <label asp-for="CNPJ" class="form-label">CNPJ <span style="color: red;">*</span></label>
-        <input asp-for="CNPJ" type="text" class="form-control shadow-none">
+        <input asp-for="CNPJ" type="text" class="form-control shadow-none" placeholder="CNPJ">
         <span asp-validation-for="CNPJ" class="text-danger"></span>
     </div>
 
@@ -54,51 +54,80 @@ else if (TempData["SuccessMessage"] != null)
 
     <div class="col-md-10">
         <label asp-for="CellPhone" class="form-label">Telefone <span style="color: red;">*</span></label>
-        <input asp-for="CellPhone" type="tel" class="form-control shadow-none">
+        <input asp-for="CellPhone" type="tel" class="form-control shadow-none" placeholder="Telefone">
         <span asp-validation-for="CellPhone" class="text-danger"></span>
     </div>
 
     <div class="col-md-7">
         <label asp-for="Street" class="form-label">Rua <span style="color: red;">*</span></label>
-        <input asp-for="Street" type="text" class="form-control shadow-none">
+        <input asp-for="Street" type="text" class="form-control shadow-none" placeholder="Rua">
         <span asp-validation-for="Street" class="text-danger"></span>
     </div>
 
     <div class="col-md-3">
         <label asp-for="Number" class="form-label">Número <span style="color: red;">*</span></label>
-        <input asp-for="Number" type="number" class="form-control shadow-none">
+        <input asp-for="Number" type="number" class="form-control shadow-none" placeholder="Número">
         <span asp-validation-for="Number" class="text-danger"></span>
     </div>
 
     <div class="col-md-10">
         <label asp-for="Complement" class="form-label">Complemento</label>
-        <input asp-for="Complement" type="text" class="form-control shadow-none">
+        <input asp-for="Complement" type="text" class="form-control shadow-none" placeholder="Complemento">
         <span asp-validation-for="Complement" class="text-danger"></span>
     </div>
 
     <div class="col-md-5">
         <label asp-for="PostalCode" class="form-label">Cep <span style="color: red;">*</span></label>
-        <input asp-for="PostalCode" type="text" class="form-control shadow-none">
+        <input asp-for="PostalCode" type="text" class="form-control shadow-none" placeholder="CEP">
         <span asp-validation-for="PostalCode" class="text-danger"></span>
     </div>
 
     <div class="col-md-5">
         <label asp-for="Neighborhood" class="form-label">Bairro <span style="color: red;">*</span></label>
-        <input asp-for="Neighborhood" type="text" class="form-control shadow-none">
+        <input asp-for="Neighborhood" type="text" class="form-control shadow-none" placeholder="Bairro">
         <span asp-validation-for="Neighborhood" class="text-danger"></span>
     </div>
 
     <div class="col-md-5">
         <label asp-for="City" class="form-label shadow-none">Cidade <span style="color: red;">*</span></label>
-        <input asp-for="City" type="text" class="form-control shadow-none">
+        <input asp-for="City" type="text" class="form-control shadow-none" placeholder="Cidade">
         <span asp-validation-for="City" class="text-danger"></span>
         <br>
     </div>
 
     <div class="col-md-5">
         <label asp-for="State" class="form-label">Estado <span style="color: red;">*</span></label>
-        <input asp-for="State" type="text" class="form-control shadow-none">
-        <span asp-validation-for="State" class="text-danger"></span>
+        <select id="State" asp-for="State" name="State" class="form-select shadow-none" placeholder="Estado">
+            <option value="">Selecione o estado</option>
+            <option value="AC">AC</option>
+            <option value="AL">AL</option>
+            <option value="AP">AP</option>
+            <option value="AM">AM</option>
+            <option value="BA">BA</option>
+            <option value="CE">CE</option>
+            <option value="DF">DF</option>
+            <option value="ES">ES</option>
+            <option value="GO">GO</option>
+            <option value="MA">MA</option>
+            <option value="MT">MT</option>
+            <option value="MS">MS</option>
+            <option value="MG">MG</option>
+            <option value="PA">PA</option>
+            <option value="PB">PB</option>
+            <option value="PR">PR</option>
+            <option value="PE">PE</option>
+            <option value="PI">PI</option>
+            <option value="RJ">RJ</option>
+            <option value="RN">RN</option>
+            <option value="RS">RS</option>
+            <option value="RO">RO</option>
+            <option value="RR">RR</option>
+            <option value="SC">SC</option>
+            <option value="SP">SP</option>
+            <option value="SE">SE</option>
+            <option value="TO">TO</option>
+        </select>
+        <span class="text-danger" id="state-validation"></span>
         <br>
     </div>
     <div class="d-flex justify-content-center align-items-center">
