fix: Consertado handler de atualizar agendamentos

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Index.cshtml
@@ -217,7 +217,7 @@ else if (TempData["SuccessMessage"] != null)
                                                 <i class="bi bi-check-circle me-2"></i> Finalizar
                                             </a>
 
-                                            <a href="@Url.Action("Update", "Schedule", new { id = schedule.Id })"
+                                            <a href="@Url.Action("Update", "Schedule", new { id = schedule.Code })"
                                                class="btn btn-warning mb-2 d-flex align-items-center justify-content-center" style="border-radius: 10px;">
                                                 <i class="fas fa-edit me-2"></i> Editar
                                             </a>
