--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Update.cshtml
@@ -65,11 +65,14 @@ else if (TempData["SuccessMessage"] != null)
         <input type="hidden" asp-for="@Model.ServiceId" value="@Model.ServiceId">
         <input type="hidden" asp-for="@Model.ServicePrice" value="@Model.ServicePrice">
         <input type="hidden" asp-for="@Model.Id" value="@Model.Id">
+        <input type="hidden" asp-for="@Model.SecondId" value="@Model.SecondId">
         <input type="hidden" asp-for="@Model.UserId" value="@Model.UserId">
         <input type="hidden" asp-for="@Model.AnimalId" value="@Model.AnimalId">
+        <input type="hidden" asp-for="@Model.Code" value="@Model.Code">
         <input type="hidden" id="durationInMinutes" asp-for="@Model.DurationInMinutes" value="@Model.DurationInMinutes">
         <input type="hidden" id="categoryName" asp-for="@Model.CategoryName" value="@Model.CategoryName">
         <input type="hidden" asp-for="EmployeeId" id="employeeId" name="employeeId">
+        
 
 
         <div class="col-md-4">
